<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_rename"
        android:title="@string/action_rename_lecture"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_move"
        android:title="@string/action_move_to_category"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_retranscribe"
        android:title="@string/action_retranscribe"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_add_handout"
        android:icon="@drawable/ic_add_24"
        android:title="@string/action_add_handout"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_export"
        android:icon="@drawable/ic_share_24"
        android:title="@string/action_share_export"
        app:showAsAction="always" />
</menu>
